cmake_minimum_required(VERSION 2.8)
 
PROJECT(PETPVC)
 
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

INCLUDE_DIRECTORIES(FuzzyCorr)
INCLUDE_DIRECTORIES(GTM)
INCLUDE_DIRECTORIES(IterativeYang)
INCLUDE_DIRECTORIES(RBV)
INCLUDE_DIRECTORIES(MullerGartner)

ADD_EXECUTABLE(pvc_iy IterativeYang/IterativeYang.cxx  )
TARGET_LINK_LIBRARIES(pvc_iy ${ITK_LIBRARIES})

#ADD_EXECUTABLE(pvc_fuzzyCorr FuzzyCorr/FuzzyCorr.cxx  )
#TARGET_LINK_LIBRARIES(pvc_fuzzyCorr ${ITK_LIBRARIES})

ADD_EXECUTABLE(pvc_gtm GTM/GTM.cxx  )
TARGET_LINK_LIBRARIES(pvc_gtm ${ITK_LIBRARIES})

ADD_EXECUTABLE(pvc_rbv RBV/RBV.cxx  )
TARGET_LINK_LIBRARIES(pvc_rbv ${ITK_LIBRARIES})

ADD_EXECUTABLE(pvc_mg MullerGartner/MullerGartner.cxx  )
TARGET_LINK_LIBRARIES(pvc_mg ${ITK_LIBRARIES})
